# nanoscholar

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
configs/: config.example.yaml
docs/: AGENT.md  SKILLS.md
nanoscholar/: __init__.py  __main__.py  _runtime.py  config.py  db.py  main.py  scheduler.py
nanoscholar/core/: __init__.py  agent.py  approval.py  context.py  permission.py  sub_agent.py
nanoscholar/interfaces/: __init__.py  cli.py  telegram.py
nanoscholar/knowledge/: __init__.py  wiki_store.py
nanoscholar/mcp/: __init__.py  client.py  protocol.py  server.py
nanoscholar/tools/: __init__.py  router.py  tool.py
nanoscholar/tools/domain/: __init__.py  agent_team_tool.py  arxiv_search.py  compare_experiments.py  log_experiment.py  paper_ingest.py  pdf_tools.py  run_python.py  sub_agent_tool.py  tasks.py  wiki_add_note.py  wiki_search.py
nanoscholar/tools/system/: __init__.py  filesystem.py  shell.py  web.py
tests/: test_nanoscholar.py  test_unoclaw.py
unoclaw/: config.example.json  main.py
