[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unoclaw"
version = "0.1.3"
description = "Minimalistic AI assistant with tool-calling, Telegram & CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Unoclaw Contributors"}
]
keywords = ["ai", "agent", "assistant", "llm", "telegram", "tool-calling", "openai", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
unoclaw = "unoclaw.main:main"

[project.urls]
Homepage = "https://github.com/2coderok/unoclaw"
Issues = "https://github.com/2coderok/unoclaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["unoclaw"]

[tool.hatch.build]
include = [
    "unoclaw/**/*.py",
    "unoclaw/docs/*.md",
    "unoclaw/config.example.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "unoclaw/",
    "README.md",
    "LICENSE",
    "assets/",  # Included in source distribution for GitHub/Reference
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]