[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nanoscholar"
version = "0.2.0"
description = "Local research assistant with tool-calling, paper search, PDF reading, Telegram & CLI."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=20.0",
]

[tool.setuptools.packages.find]
include = ["nanoscholar*"]

[project.scripts]
nanoscholar = "nanoscholar.__main__:main"

